# clutch

./: .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  Makefile.ci  Makefile.coq  PAPER.html  PAPER.md  README.html  README.md  TODO.md  _CoqProject  _opam  approxis.opam  caliper.opam  clutch-dp.opam  clutch.opam  code_paper_map.md  coneris.opam  coq-clutch.opam  dune-project  eris-samplers.opam  eris.opam  eris_paper_mapping.html  eris_paper_mapping.md  foxtrot.opam  ftlr.md  install_au_printer.sh.1  instructions.md  iris-probability.opam  paper_mapping.html  paper_mapping.md  rocq-clutch.opam  rocq-elton.opam  rocq-foxtrot.opam  tachis.opam
theories/: Reals_ext.v  Series_ext.v  clutch.v  countable_sum.v  distribution.v  dune  giry_experiments.v  stdpp_ext.v
theories/app_rel_logic/: adequacy.v  app_clutch.v  app_weakestpre.v  coupling_rules.v  derived_laws.v  ectx_lifting.v  lifting.v  model.v  paris.v  primitive_laws.v  proofmode.v  seq_amplification.v  spec_ra.v  spec_rules.v  spec_tactics.v
theories/approxis/: README.md  adequacy.v  adequacy_rel.v  app_rel_rules.v  app_weakestpre.v  approxis.v  approxis_examples.v  compatibility.v  coupling_rules.v  derived_laws.v  ectx_lifting.v  fundamental.v  interp.v  lifting.v  model.v  primitive_laws.v  proofmode.v  rel_tactics.v  reltac2.v  soundness.v
theories/base_logic/: error_credits.v  error_credits_mult.v  renyi_credits.v  spec_auth_markov.v  spec_markov.v  spec_update.v
theories/bi/: weakestpre.v
theories/caliper/: adequacy.v  derived_laws.v  ectx_lifting.v  lifting.v  primitive_laws.v  proofmode.v  seq_weakestpre.v  weakestpre.v
theories/clutch/: adequacy.v  adequacy_rel.v  compatibility.v  coupling_rules.v  derived_laws.v  ectx_lifting.v  fundamental.v  interp.v  lifting.v  model.v  primitive_laws.v  proofmode.v  rel_rules.v  rel_tactics.v  reltac2.v  soundness.v  weakestpre.v
theories/common/: con_ectx_language.v  con_ectxi_language.v  con_inject.v  con_language.v  ectx_language.v  ectxi_language.v  erasable.v  exec.v  exec_probs.v  inject.v  language.v  locations.v  sch_erasable.v  scheduler.v  spec.v  spec_update.v
theories/con_prob_lang/: class_instances.v  ctx_subst.v  erasure.v  lang.v  lub_termination.v  metatheory.v  notation.v  tactics.v  wp_tactics.v
theories/coneris/: README.html  README.md  adequacy.v  atomic.v  coneris.v  coneris_print_assumptions.v  derived_laws.v  ectx_lifting.v  error_rules.v  lifting.v  primitive_laws.v  proofmode.v  weakestpre.v  wp_update.v
theories/ctx_logic/: adequacy.v  adequacy_rel.v  compatibility.v  coupling_rules.v  derived_laws.v  ectx_lifting.v  lifting.v  model.v  primitive_laws.v  proofmode.v  rel_rules.v  rel_tactics.v  reltac2.v  spec_ra.v  spec_rules.v  spec_tactics.v  weakestpre.v
theories/delay_prob_lang/: class_instances.v  commute.v  distr_urns.v  lang.v  metatheory.v  notation.v  preserve_atomicity.v  tactics.v  urn_erasable.v  urn_subst.v  urn_subst_bin_op.v  wp_tactics.v
theories/diffpriv/: adequacy.v  adequacy_pw_simple.v  adequacy_rel.v  adequacy_simple.v  app_rel_rules.v  compatibility.v  coupling_rules.v  coupling_rules_pw_simple.v  coupling_rules_simple.v  derived_laws.v  diffpriv.v  diffpriv_rules.v  distance.v  ectx_lifting.v  ectx_lifting_pw_simple.v  ectx_lifting_simple.v  fundamental.v  interp.v  lifting.v  lifting_pw_simple.v  lifting_simple.v  model.v  primitive_laws.v  primitive_laws_pw_simple.v  primitive_laws_simple.v  print_assumptions.v  proofmode.v  rel_tactics.v  soundness.v  unary_adequacy.v  weakestpre.v  weakestpre_prob_lang_resources.v  weakestpre_pw.v  wp_pw_simple.v  wp_pw_simple_prob_lang_resources.v  wp_simple.v  wp_simple_prob_lang_resources.v
theories/diffpriv_simple/: adequacy_simple.v  adequacy_simple_pw.v  coupling_rules_simple.v  derived_laws_simple.v  diffpriv_rules_simple.v  diffpriv_simple.v  distance_simple.v  ectx_lifting_simple.v  lifting_simple.v  primitive_laws_simple.v  proofmode_simple.v  pw_direct_proof.v  weakestpre_simple.v  weakestpre_simple_prob_lang_resources.v  weakestpre_simple_prob_lang_resources_pw.v  weakestpre_simple_pw_again.v  wp_simple.v  wp_simple_prob_lang_resources.v
theories/diffpriv_simple_pw/: adequacy_pw_simple.v  adequacy_simple_pw.v  coupling_rules_pw_simple.v  coupling_rules_simple_pw.v  derived_laws_simple_pw.v  diffpriv_rules_simple_pw.v  diffpriv_simple_pw.v  distance_simple_pw.v  ectx_lifting_pw_simple.v  ectx_lifting_simple_pw.v  lifting_pw_simple.v  lifting_simple_pw.v  primitive_laws_pw_simple.v  primitive_laws_simple_pw.v  proofmode_simple_pw.v  weakestpre_simple_pw.v  weakestpre_simple_pw_prob_lang_resources.v  wp_pw_simple.v  wp_pw_simple_prob_lang_resources.v
theories/diffpriv_simple_pw_again/: adequacy_simple.v  coupling_rules_simple.v  derived_laws_simple.v  diffpriv_rules_simple.v  diffpriv_simple_pw_again.v  distance_simple.v  ectx_lifting_simple.v  lifting_simple.v  primitive_laws_simple.v  proofmode_simple.v  pw_direct_proof.v  weakestpre_simple.v  weakestpre_simple_prob_lang_resources.v
theories/elton/: adequacy.v  derived_laws.v  ectx_lifting.v  elton.v  error_rules.v  lifting.v  primitive_laws.v  print_assumptions.v  proofmode.v  pupd.v  rupd.v  urns_distr.v  weakestpre.v
theories/eris/: adequacy.v  array_laws.v  ast_pure.v  complete_pre.v  completeness.vt  derived_laws.v  ectx_lifting.v  eris.v  error_credits.v  error_rules.v  hash.v  lang_completeness.v  lifting.v  presample_rules.v  primitive_laws.v  proofmode.v  receipt_rules.v  seq_amplification.v  total_adequacy.v  total_derived_laws.v  total_ectx_lifting.v  total_lifting.v  total_primitive_laws.v  total_weakestpre.v  weakestpre.v
theories/ert_logic/: adequacy.v  cost_models.v  derived_laws.v  ectx_lifting.v  ert_primitive_laws.v  ert_rules.v  ert_weakestpre.v  expected_time_credits.v  lifting.v  primitive_laws.v  problang_wp.v  proofmode.v  quicksort.v
theories/examples/: ElGamal.v  ElGamal_bijection.v  ElGamal_group_val.v  approximate_bounded_rejection_sampler.v  asymmetric_encryption.v  awkward_deterministic.v  awkward_lazy_eager_coin.v  awkward_probabilistic.v  counterexample.v  dhke.v  (+25 more)
(+1994 files in other folders)
