opam-version: "2.0"
name: "coq-caliper"
synopsis: "-"
maintainer: "Anonymous"
authors: "Anonymous"
license: "MIT"
homepage: "anonymous"
dev-repo: "anonymous"
bug-reports: "anonymous"
build: [make "-j%{jobs}%"]
install: []
depends: [
  "coq" { (>= "8.18" & < "8.19~") | (= "dev") }
  "coq-coquelicot" { (>= "3.2.0" & <= "3.4.0") }
  "coq-iris" { (= "4.1.0") | (= "dev") }
  "coq-stdpp" { (= "1.9.0") | (= "dev") }
  "coq-mathcomp-ssreflect" { (= "1.17.0") }
]
