opam-version: "2.0"
name: "coq-clutch"
synopsis: "Higher-order probabilistic separation logics"
maintainer: "Simon Oddershede Gregersen <s.gregersen@nyu.edu>"
authors: "Simon Oddershede Gregersen,
          Alejandro Aguirre,
          Philipp G. Haselwarter,
          Kwing Hei Li,
          Markus de Medeiros,
          Joseph Tassarotti,
          Lars Birkedal"
license: "MIT"
homepage: "https://github.com/logsem/clutch"
dev-repo: "git+https://github.com:logsem/clutch.git"
bug-reports: "https://github.com/logsem/clutch/issues"
build: [make "-j%{jobs}%"]
install: []
depends: [
  "coq" { (>= "8.19" & < "8.20~") | (= "dev") }
  "coq-iris" { (= "4.2.0") | (= "dev") }
  "coq-stdpp" { (= "1.10.0") | (= "dev") }
  "coq-coquelicot" { (= "3.4.1") }
  "coq-autosubst" { (= "1.8") | (= "dev") }
  "coq-hierarchy-builder" { (= "1.7.0") }
  "coq-mathcomp-ssreflect" { (= "2.2.0") }
  "coq-mathcomp-solvable" { (= "2.2.0") }
  "coq-mathcomp-analysis" { (= "1.4.0") }
]
