opam-version: "2.0"
name: "coq-clutch"
synopsis: "Higher-order probabilistic separation logics"
maintainer: "Simon Oddershede Gregersen <s.gregersen@nyu.edu>"
authors: "Simon Oddershede Gregersen,
          Alejandro Aguirre,
          Philipp G. Haselwarter,
          Kwing Hei Li,
          Markus de Medeiros,
          Joseph Tassarotti,
          Lars Birkedal"
license: "MIT"
homepage: "https://github.com/logsem/clutch"
dev-repo: "git+https://github.com:logsem/clutch.git"
bug-reports: "https://github.com/logsem/clutch/issues"
build: [make "-j%{jobs}%"]
install: []
depends: [
  "rocq-core" { (>= "9.0.0" & < "9.1~") | (= "dev") }
  "rocq-stdlib" { (>= "9.0.0" & < "9.1~") | (= "dev") }
  "coq-iris" { (= "4.4.0") | (= "dev") }
  "coq-stdpp" { (= "1.12.0") | (= "dev") }
  "coq-coquelicot" { (= "3.4.4") }
  "coq-autosubst" { (= "1.9") | (= "dev") }
  "coq-hierarchy-builder" { (= "1.10.1") }
  "coq-mathcomp-ssreflect" { (= "2.5.0") }
  "coq-mathcomp-solvable" { (= "2.5.0") }
  "coq-mathcomp-analysis" { (= "1.14.0") }
]
