opam-version: "2.0"
name: "coq-eris-distr"
synopsis: "Sampler library for higher-order probabilistic separation logics"
maintainer: "anonymous"
authors: "anonymous"
license: "MIT"
build: [make "-j%{jobs}%"]
install: []
depends: [
  "coq" { (>= "8.19" & < "8.20~") | (= "dev") }
  "coq-iris" { (= "4.2.0") | (= "dev") }
  "coq-stdpp" { (= "1.10.0") | (= "dev") }
  "coq-coquelicot" { (= "3.4.1") }
  "coq-autosubst" { (= "1.8") | (= "dev") }
  "coq-graph-theory" { (= "0.9.6") | (= "dev") }
  "coq-hierarchy-builder" { (= "1.8.1") }
  "coq-mathcomp-ssreflect" { (= "2.2.0") }
  "coq-mathcomp-solvable" { (= "2.2.0") }
  "coq-mathcomp-analysis" { (= "1.4.0") }
]
