opam-version: "2.0"
name: "coq-eris"
synopsis: "Error Credits: Resourceful Reasoning about Error Bounds for Higher-Order Probabilistic Programs"
maintainer: "Anonymous"
authors: "Anonymous"
license: "MIT"
build: [make "-j%{jobs}%"]
install: []
depends: [
  "coq" { (>= "8.18" & < "8.19~") | (= "dev") }
  "coq-coquelicot" { (>= "3.2.0" & <= "3.4.0") }
  "coq-iris" { (= "4.1.0") | (= "dev") }
  "coq-stdpp" { (= "1.9.0") | (= "dev") }
  "coq-autosubst" { (= "1.8") | (= "dev") }
  "coq-mathcomp-ssreflect" { (= "1.17.0") }
  "coq-mathcomp-solvable" { (= "1.17.0") }
]
