opam-version: "2.0"
name: "coq-iris-probability"
synopsis: "Some probabilistic stuff in Iris"
maintainer: "Simon Oddershede Gregersen"
authors: "Simon Oddershede Gregersen"
license: "MIT"
homepage: "https://github.com/logsem/iris-probability"
dev-repo: "git+https://github.com/logsem/iris-probability.git"
bug-reports: "https://github.com/logsem/iris-probability/issues"
build: [make "-j%{jobs}%"]
install: []
depends: [
  "coq" { (>= "8.15" & < "8.17~") | (= "dev") }
  "coq-coquelicot" { (= "3.2.0") }
  "coq-iris" { (= "4.0.0") | (= "dev") }
  "coq-stdpp" { (= "1.8.0") | (= "dev") }
  "coq-autosubst" { (= "dev") }
]
