opam-version: "2.0"
name: "coq-iris-probability"
synopsis: "A higher-order probabilistic relational separation logic"
maintainer: "Anonymous"
authors: "Anonymous"
license: "MIT"
homepage: "anonymous"
dev-repo: "git+https://anonymous.now"
bug-reports: "anonymous"
build: [make "-j%{jobs}%"]
install: []
depends: [
  "coq" { (>= "8.15" & < "8.17~") | (= "dev") }
  "coq-coquelicot" { (= "3.2.0") }
  "coq-iris" { (= "4.0.0") | (= "dev") }
  "coq-stdpp" { (= "1.8.0") | (= "dev") }
  "coq-autosubst" { (= "dev") }
]
