opam-version: "2.0"
name: "coq-tachis"
synopsis: "A higher-order probabilistic relational separation logic"
maintainer: "Simon Oddershede Gregersen <gregersen@cs.au.dk>"
authors: "Simon Oddershede Gregersen,
          Alejandro Aguirre,
          Philipp G. Haselwarter,
          Joseph Tassarotti,
          Lars Birkedal"
license: "MIT"
homepage: "https://github.com/logsem/tachis"
dev-repo: "git+https://github.com:logsem/tachis.git"
bug-reports: "https://github.com/logsem/tachis/issues"
build: [make "-j%{jobs}%"]
install: []
depends: [
  "coq" { (>= "8.18" & < "8.19~") | (= "dev") }
  "coq-coquelicot" { (>= "3.2.0" & <= "3.4.0") }
  "coq-iris" { (= "4.1.0") | (= "dev") }
  "coq-stdpp" { (= "1.9.0") | (= "dev") }
  "coq-mathcomp-ssreflect" { (= "1.17.0") }
]
