opam-version: "2.0"
name: "coq-tachis"
synopsis: "A higher-order probabilistic relational separation logic"
maintainer: "anonymous"
authors: "anonymous"
license: "MIT"
build: [make "-j%{jobs}%"]
install: []
depends: [
  "coq" { (>= "8.18" & < "8.19~") | (= "dev") }
  "coq-coquelicot" { (>= "3.2.0" & <= "3.4.0") }
  "coq-iris" { (= "4.1.0") | (= "dev") }
  "coq-stdpp" { (= "1.9.0") | (= "dev") }
  "coq-mathcomp-ssreflect" { (= "1.17.0") }
]
