(include_subdirs qualified)
(coq.theory
 (name clutch)
 (package coq-clutch)
 (theories
   ; local
   discprob

   ; external
   Ltac2 iris stdpp
   ; TODO these two should not be needed; looks like a Coquelicot packaging bug
   elpi HB

   Coquelicot Autosubst
   mathcomp
   mathcomp.ssreflect mathcomp.solvable mathcomp.analysis)
 (flags
   -w -notation-overridden
   -w -redundant-canonical-projection
   -w -convert_concl_no_check
   -w -undeclared-scope
   -w -ambiguous-paths
   -w -ssr-search-moved))
