(include_subdirs qualified)
(coq.theory
 (name clutch)
 (package rocq-clutch)
 (theories
   ; local
   discprob

   ; external
   Stdlib
   Ltac2 iris stdpp
   
   Coquelicot
   Autosubst
   HB
   mathcomp
   mathcomp.ssreflect mathcomp.solvable mathcomp.analysis)
 (flags
   -w -notation-overridden
   -w -redundant-canonical-projection
   -w -convert_concl_no_check
   -w -undeclared-scope
   -w -ambiguous-paths
   -w -ssr-search-moved)
 (coqdoc_flags
   :standard
   --toc-depth 2 --interpolate --index indexpage --no-lib-name --parse-comments
   --with-header %{dep:../coqdocjs/extra/header.html}
   --with-footer %{dep:../coqdocjs/extra/footer.html}
   --external https://plv.mpi-sws.org/coqdoc/iris/ iris
   --external https://plv.mpi-sws.org/coqdoc/stdpp/ stdpp
   --external http://coquelicot.saclay.inria.fr/html/ Coquelicot
   --external https://math-comp.github.io/htmldoc_1_4_0/ mathcomp.analysis))
